# forecast_pm_2_5

./: .env.sample  .gitattributes  .gitignore  2099_ConvLSTM1D_+_Bidirectional_LSTM.ipynb  Custom_LSTM_PM25.ipynb  README.md  pyproject.toml
forecast_pm_2_5/: default_settings.py
forecast_pm_2_5/cmd/: web.py
forecast_pm_2_5/models/: __init__.py  forecast_model.py
forecast_pm_2_5/utils/forecast_model/: model.h5
forecast_pm_2_5/web/: __init__.py  acl.py
forecast_pm_2_5/web/static/: package.json
forecast_pm_2_5/web/templates/site/: index.html
forecast_pm_2_5/web/test/: api_air4thai.py  test2.py  test3.py  test_pre.py
forecast_pm_2_5/web/views/: sites.py
scripts/: init-admin.py  run-web  test_connection.py
