[tool.poetry]
name = "forecast_pm_2_5"
version = "0.1.0"
description = ""
authors = ["Kunanon Nusaeng <kanjicool2077@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
Flask = "^3.1.0"
Flask-Login = "^0.6.3"
mongoengine = "^0.29.1"
Werkzeug = "^3.1.3"
flask-me = "^1.0.2"
Flask-Caching = "^2.3.1"
Flask-Bcrypt = "^1.0.1"
Flask-WTF = "^1.2.2"
pymongo = "^4.11.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"


[tool.poetry.scripts]
forecast_pm_2_5-web = "forecast_pm_2_5.cmd.web:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
